# marka-site

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: CI.yml  backend-CI.yml  continuous-integration.yml  frontend-CI.yml
Backend/: Dockerfile  requirements.txt
Backend/app/: main.py
Backend/tests/: test_main.py
Frontend/: Dockerfile  README.md  env.d.ts  index.html  package.json
Frontend/.github/workflows/: CI.yml
Frontend/src/: App.vue
Frontend/src/assets/style/: style.css
Frontend/src/tests/: App.test.ts
marka-backend/: pyproject.toml  requirements.txt
marka-backend/app/: main.py
marka-frontend/: package-lock.json
